Enhance code quality with ErrorProne, NullAway, and Spotless formatting (#4)
*   **Static Analysis & Linting:** Integrated `ErrorProne`, `NullAway`, and `Spotless` (using Palantir format) into the Gradle build to enforce null safety and consistent coding styles.
*   **Documentation:** Replaced `CLAUDE.md` with a more comprehensive `AGENTS.md` and updated the `README.md` with accurate parser versioning and API usage examples.
*   **CI/CD:** Updated GitHub Actions to use the latest runner versions (`ubuntu-latest`, etc.) and added a `check` task dependency on linting and package-info verification.
*   **JSR-305/JSpecify Support:** Added `@NullMarked` package-level annotations and `package-info.java` files across all modules to support strict nullability checking.
*   **Code Cleanup:** Performed a global refactor to remove unused imports, fix formatting, and ensure all native method declarations follow standard conventions.