@@ -1,15 +1,11 @@
-
 package org.treesitter;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Properties;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 class TreeSitterCssTest {
     private TSParser parser;
@@ -24,20 +20,16 @@ class TreeSitterCssTest {
     @Test
     void examples() throws IOException {
         String ext = ".css";
-        Properties properties = new Properties();
-        try (FileInputStream input = new FileInputStream("gradle.properties")) {
-            properties.load(input);
-            String examplesPath = "src/test/resources/examples";
-            Path dir = Paths.get(examplesPath);
-            Files.walk(dir)
-                    .filter(path -> path.toString().endsWith(ext))
-                    .forEach(this::parse);
+        String examplesPath = "src/test/resources/examples";
+        Path dir = Paths.get(examplesPath);
+        try (var walk = Files.walk(dir)) {
+            walk.filter(path -> path.toString().endsWith(ext)).forEach(this::parse);
         }
     }
 
-    private void parse(Path file){
+    private void parse(Path file) {
         try {
-            String source = new String(Files.readAllBytes(file));
+            String source = Files.readString(file);
             parser.reset();
             parser.parseString(null, source);
         } catch (IOException e) {
